reconfigure poetry to keep venv in project directory (to place nicer with LSPs)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,15 @@ cloudpickle = "^3.0.0"
 requests = "^2.31.0"
 
 
+[virtualenvs]
+in-project = true
+
+
+[tool.pyright]
+venvPath = "."
+venv = ".venv"
+
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
