--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 description = ""
 authors = ["Connor Hainje <cmhainje@gmail.com>"]
 readme = "README.md"
-packages = [{include = "lbc"}]
+packages = [{ include = "lbc" }]
+
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.12"
 numpy = "^1.26.3"
 pandas = "^2.1.4"
 matplotlib = "^3.8.2"
@@ -21,6 +22,15 @@ ipywidgets = "^8.1.1"
 ipykernel = "^6.28.0"
 cloudpickle = "^3.0.0"
 requests = "^2.31.0"
+scikit-image = "^0.24.0"
+wrap-torch2jax = "^0.4.10"
+cmz = {git = "https://github.com/cmhainje/cmz.git"}
+scikit-learn = "^1.5.1"
+
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.4"
+ipywidgets = "^8.1.3"
 
 
 [virtualenvs]
